Fix grammar of labels
Bug: 128685620

Change-Id: I35da02635ef74d00800bccee11feb507d8b5327b

--- a/src/main/ngapp/src/app/home/home.component.html
+++ b/src/main/ngapp/src/app/home/home.component.html
@@ -30,7 +30,7 @@
 
 			<button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">Upload</button>
 
-			<p>Agent User ID:
+			<p>agentUserId:
 				<input type="text" id="agentUserID" (change)="setAgentId($event)"
 				 name="agentUserId" required>
 			</p>
