--- a/src/main/ngapp/src/app/device-list/device-list.component.css
+++ b/src/main/ngapp/src/app/device-list/device-list.component.css
@@ -19,3 +19,9 @@
 .color-white {
   color: white;
 }
+img.mat-list-avatar {
+  width: 40px;
+  height: 40px;
+  min-width: inherit;
+  border-radius: 100%;
+}
