--- a/src/main/ngapp/src/app/device-list/device-list.component.html
+++ b/src/main/ngapp/src/app/device-list/device-list.component.html
@@ -21,7 +21,7 @@
         [ngStyle]="{'background-color':device.updated ? 'green' : '#424242' }">
 
         <img mat-list-avatar ng-show="device.giphyUrl" src="{{device.giphyUrl}}" alt="{{device.name}}">
-        <i mat-list-avatar class="material-icons md-48 md-light" ng-show="!device.giphyUrl">{{device.icon}}</i>
+        <i mat-list-avatar class="material-icons md-48 md-light" ng-show="device.icon">{{device.icon}}</i>
         <h3 mat-line class='device-name'>{{device.name}} ({{device.nicknames.join(',')}}) ({{device.id}})</h3>
 
         <mat-divider></mat-divider>
